--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 
     "spell": "cspell --no-progress --gitignore  \"src/**/*.ts\""
   },
+  "author": "romanenkoisnot@gmail.com",
+  "license": "Apache-2.0",
   "private": true,
   "dependencies": {
     "@angular/common": "^19.2.0",
