--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-
     "spell": "cspell --no-progress --gitignore  \"src/**/*.ts\""
   },
   "author": "romanenkoisnot@gmail.com",
@@ -40,6 +39,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.7.2"
   }
 }
