--- a/package.json
+++ b/package.json
@@ -20,11 +20,8 @@
     "@angular/platform-browser": "^19.2.13",
     "@angular/platform-browser-dynamic": "^19.2.13",
     "@angular/router": "^19.2.13",
-    "@tailwindcss/postcss": "^4.1.7",
     "jszip": "^3.10.1",
-    "postcss": "^8.5.3",
     "rxjs": "~7.8.2",
-    "tailwindcss": "^4.1.7",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
   },
@@ -33,6 +30,7 @@
     "@angular/cli": "^19.2.13",
     "@angular/compiler-cli": "^19.2.13",
     "@types/jasmine": "~5.1.8",
+    "autoprefixer": "^10.4.21",
     "cspell": "^9.0.2",
     "jasmine-core": "~5.7.1",
     "karma": "~6.4.4",
@@ -42,6 +40,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   }
 }
