--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,9 @@
       "@services": ["src/app/core/services/index.ts"],
       "@storage": ["src/app/core/storage/index.ts"],
 
-      "@features": ["src/app/interface/features/index.ts"],
-      "@pages/*": ["src/app/interface/pages/*"], // index.ts is not used, couse the pages are being decalred as default export
-      "@widgets": ["src/app/interface/widgets/index.ts"],
+      "@features": ["src/app/shared/features/index.ts"],
+      "@pages/*": ["src/app/shared/pages/*"], // index.ts is not used, couse the pages are being decalred as default export
+      "@widgets": ["src/app/shared/widgets/index.ts"],
 
       "@modules/*": ["src/app/modules/*"],
 
