--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "@angular-devkit/build-angular": "^20.1.3",
     "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.3",
+    "@angular/localize": "^20.1.3",
     "autoprefixer": "^10.4.21",
     "cspell": "^9.2.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   }
