--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,12 +4,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": ["@angular/localize"]
   },
-  "files": [
-    "src/main/main.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ]
+  "files": ["src/main/main.ts"],
+  "include": ["src/**/*.d.ts"]
 }
