--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "lang": "ng extract-i18n --format=json --out-file src/translations/source.json",
+    "sync-translations": "cp src/translations/*.json public/translations/",
     "spell": "cspell --no-progress --gitignore  \"src/**/*.ts\""
   },
   "author": "romanenkoisnot@gmail.com",
