--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
       "@types": ["src/app/shared/types/index.d.ts"],
       "@widgets": ["src/app/shared/widgets/index.ts"],
 
+      "@libs": ["src/libs/index.ts"],
+      "@libs/*": ["src/libs/*"],
       "@environments": ["src/environments/index.ts"]
     },
     "outDir": "./dist/out-tsc",
