--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lang": "ng extract-i18n --format=json --out-file src/translations/source.json",
     "sync-translations": "cp src/translations/*.json public/translations/",
     "spell": "cspell --no-progress --gitignore  \"src/**/*.ts\"",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "format": "prettier --write \"src/**/*.{ts,js,json,scss,html}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,js,json,scss,html}\""
   },
   "author": "romanenkoisnot@gmail.com",
   "license": "Apache-2.0",
@@ -31,6 +33,7 @@
     "@angular/cli": "^20.2.2",
     "@angular/compiler-cli": "^20.2.4",
     "@angular/localize": "^20.2.4",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "angular-eslint": "20.2.0",
     "autoprefixer": "^10.4.21",
     "cspell": "^9.2.1",
