--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser": "^20.2.4",
     "@angular/platform-browser-dynamic": "^20.2.4",
     "@angular/router": "^20.2.4",
+    "@primeuix/themes": "^2.0.1",
     "jszip": "^3.10.1",
+    "primeng": "^20.3.0",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
